--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,6 @@ project(untitled1 C)
 set(CMAKE_C_STANDARD 11)
 
 add_executable(untitled1 main.c
-        Terminal.h
-        main.h)
+        main.h
+        Shuffle.h
+        Shuffle.c)
