--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,6 @@ set(CMAKE_C_STANDARD 11)
 
 add_executable(untitled1 main.c
         Terminal.h
-        main.h)
+        main.h
+        FLinkedlists.c
+        FLinkedlists.h)
